welcome.lessons.welcome.variables.RunHalf.scala.code
var x:Int=0
var y:Int=0

while (!estSurBiscuit) {avance();}
while (!estSurOrange) {avance();} 

if (estSurBiscuit) {x = x+1}
if (estSurOrange) {y = y+1}

setPos(2*x; y+1)
